--- a/package.json
+++ b/package.json
@@ -24,27 +24,32 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dayjs": "^1.11.5",
+    "dompurify": "^3.0.9",
     "express": "^4.19.2",
     "immer": "9.0.15",
-    "jsonwebtoken": "^9.0.0",
+    "jsdom": "^22.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "kysely": "^0.27.3",
     "lodash": "4.17.21",
     "multer": "^1.4.2",
-    "papaparse": "^5.2.0",
-    "zod": "^3.10.3",
-    "dompurify": "^3.0.9",
-    "jsdom": "^22.1.0",
     "nanoid": "3",
-    "kysely": "^0.27.3"
+    "papaparse": "^5.2.0",
+    "pg": "^8.11.5",
+    "zod": "^3.10.3"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.17",
+    "@types/dompurify": "^3.0.4",
     "@types/express": "4.17.6",
     "@types/jest": "^28.1.7",
+    "@types/jsdom": "^21.1.4",
     "@types/jsonwebtoken": "^8.5.4",
     "@types/lodash": "^4.14.155",
     "@types/multer": "1.4.3",
     "@types/node": "14.0.12",
     "@types/papaparse": "^5.3.2",
+    "@types/pg": "^8.11.6",
     "@types/uuid": "^8.3.4",
     "copyfiles": "^2.4.1",
     "dotenv": "^16.0.1",
@@ -54,13 +59,11 @@
     "nodemon": "^2.0.15",
     "prettier": "2.4.1",
     "prisma": "5.2.0",
+    "prisma-kysely": "^1.8.0",
     "ts-jest": "^28.0.8",
     "ts-node": "^10.9.1",
     "tslint": "6.1.3",
-    "typescript": "5.4.5",
-    "@types/dompurify": "^3.0.4",
-    "@types/jsdom": "^21.1.4",
-    "prisma-kysely": "^1.8.0"
+    "typescript": "5.4.5"
   },
   "lint-staged": {
     "*.{js,ts,tsx,css,md}": "prettier --write"
