--- a/package.json
+++ b/package.json
@@ -64,7 +64,8 @@
     "ts-jest": "^28.0.8",
     "ts-node": "^10.9.1",
     "tslint": "6.1.3",
-    "typescript": "5.4.5"
+    "typescript": "5.4.5",
+    "vitest": "^1.6.0"
   },
   "lint-staged": {
     "*.{js,ts,tsx,css,md}": "prettier --write"
